adding real world example bug

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>Scalaconstruct.com is all about building blocks of scala, it focuses on practical usage of scala with examples and code snippets.
+        <p>Explore scala world, it's all about building blocks of scala, it focuses on practical usage of scala with examples and code snippets.
       </p>
       </div>
 
